--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-gateway-plugin-rewrite",
   "version": "1.0.0",
   "description": "Rewrite plugin for express-gateway",
-  "main": "index.js",
+  "main": "manifest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/ExpressGateway/express-gateway-plugin-rewrite#readme",
   "devDependencies": {
-    "express-gateway": "^1.1.1"
+    "express-gateway": "^1.2.0"
   },
   "dependencies": {
     "http-rewrite-middleware": "^0.1.6"
