--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
             "name": "Launch Program",
             "restart": true,
             "program": "${workspaceRoot}/test/server.js",
+            "console": "integratedTerminal",
             "env": {
                 "LOG_LEVEL": "debug"
             }
