--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "express-gateway": "^1.2.0"
   },
   "dependencies": {
-    "http-rewrite-middleware": "^0.1.6"
+    "path-to-regexp": "^2.0.0"
   }
 }
