--- a/test/config/gateway.config.yml
+++ b/test/config/gateway.config.yml
@@ -22,6 +22,13 @@ pipelines:
           -
             condition:
               name: pathmatch
+              match: /api/:route*
+            action:
+              rewrite: /api/v1/:route
+              redirect: 301
+          -
+            condition:
+              name: pathmatch
               match: /gigino/:code
             action:
               rewrite: /status/:code
