--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   "homepage": "https://github.com/ExpressGateway/express-gateway-plugin-rewrite#readme",
   "devDependencies": {
     "axios": "^0.16.2",
-    "express": "^4.15.4",
-    "express-gateway": "^1.2.0",
-    "jest": "^21.1.0"
+    "express": "^4.15.5",
+    "express-gateway": "git://github.com/expressGateway/express-gateway.git#features/plugin-typings",
+    "jest": "^21.2.1"
   },
   "dependencies": {
     "path-to-regexp": "^2.0.0"
