--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "express": "^4.15.5",
-    "express-gateway": "git://github.com/expressGateway/express-gateway.git#features/plugin-typings",
+    "express-gateway": "git://github.com/expressGateway/express-gateway.git",
     "jest": "^21.2.1"
   },
   "dependencies": {
