--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,28 +2,16 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:latest
-    working_directory: ~/repo
-
+      - image: 'circleci/node:latest'
     steps:
       - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: npm install
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
+      - run:
+          name: install
+          command: npm install
       - run:
           command: node ./test/server.js
           background: true
-
       - run: npm test
-
-
+      - run:
+          name: release
+          command: npm run semantic-release || true
