--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "express-gateway-plugin-rewrite",
-  "version": "1.1.2",
+  "version": "0.0.0-development",
   "description": "Rewrite plugin for express-gateway",
   "main": "manifest.js",
   "scripts": {
-    "test": "jest --env node"
+    "test": "jest --env node",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ExpressGateway/express-gateway-plugin-rewrite.git"
+    "url": "https://github.com/ExpressGateway/express-gateway-plugin-rewrite.git"
   },
   "keywords": [
     "express-gateway",
@@ -24,10 +25,11 @@
     "@types/json-schema": "^6.0.0",
     "axios": "^0.18.0",
     "express": "^4.16.2",
-    "express-gateway": "^1.7.2",
-    "jest": "^22.4.2"
+    "express-gateway": "^1.8.2",
+    "jest": "^22.4.2",
+    "semantic-release": "^15.1.7"
   },
   "dependencies": {
-    "path-to-regexp": "^2.1.0"
+    "path-to-regexp": "^2.2.1"
   }
 }
